--- a/.github/workflows/v4-base-image-check.yml
+++ b/.github/workflows/v4-base-image-check.yml
@@ -1,46 +1,46 @@
-name: Check Docker Image Hash
+name: Check dotnet Base Image Hash
 
 on:
-    schedule:
-      - cron:  '21 19 * * *'
+  schedule:
+    - cron:  '12 19 * * *'
 
-    jobs:
-        check_image_hash:
-            runs-on: ubuntu-latest
-        
-            steps:
-            - name: Checkout repository
-                uses: actions/checkout@v3
-        
-            - name: Pull Docker image
-                run: docker pull mcr.microsoft.com/dotnet/runtime:8.0
-        
-            - name: Export Docker image filesystem
-                run: |
-                CURRENT_HASH=$(docker save mcr.microsoft.com/dotnet/runtime:8.0 | tar -xO | shasum -a 256 | cut -d' ' -f1)
-                echo "::set-env name=CURRENT_HASH::$CURRENT_HASH"
-        
-            - name: Get previous hash
-                id: get_previous_hash
-                run: echo "::set-output name=previous_hash::$(cat upstream-releases/dotnet_hash.txt)" || echo "::set-output name=previous_hash::"
-        
-            - name: Compare hashes
-                id: compare_hashes
-                run: |
-                if [ -n "${{ steps.get_previous_hash.outputs.previous_hash }}" ]; then
-                    if [ "${{ steps.get_previous_hash.outputs.previous_hash }}" = "${{ env.CURRENT_HASH }}" ]; then
-                    echo "Hashes match. No change detected."
-                    else
-                    echo "Hashes differ. There's a change in the image."
-                    echo "${{ env.CURRENT_HASH }}" > upstream-releases/dotnet_hash.txt
-                    # Trigger the build-and-push workflow
-                    curl -X POST \
-                        -H "Accept: application/vnd.github.everest-preview+json" \
-                        -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-                        https://api.github.com/repos/owner/repo/dispatches \
-                        -d '{"event_type": "v4-build-and-push"}'
-                    fi
-                else
-                    echo "Previous hash not found. This is likely the first run."
-                    echo "${{ env.CURRENT_HASH }}" > upstream-releases/dotnet_hash.txt
-                fi
+jobs:
+  check_image_hash:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Pull Docker image
+        run: docker pull mcr.microsoft.com/dotnet/runtime:8.0
+
+      - name: Export Docker image filesystem
+        run: |
+          CURRENT_HASH=$(docker save mcr.microsoft.com/dotnet/runtime:8.0 | tar -xO | shasum -a 256 | cut -d' ' -f1)
+          echo "::set-env name=CURRENT_HASH::$CURRENT_HASH"
+
+      - name: Get previous hash
+        id: get_previous_hash
+        run: echo "::set-output name=previous_hash::$(cat upstream-releases/dotnet_hash.txt)" || echo "::set-output name=previous_hash::"
+
+      - name: Compare hashes
+        id: compare_hashes
+        run: |
+          if [ -n "${{ steps.get_previous_hash.outputs.previous_hash }}" ]; then
+            if [ "${{ steps.get_previous_hash.outputs.previous_hash }}" = "${{ env.CURRENT_HASH }}" ]; then
+              echo "Hashes match. No change detected."
+            else
+              echo "Hashes differ. There's a change in the image."
+              echo "${{ env.CURRENT_HASH }}" > upstream-releases/dotnet_hash.txt
+              # Trigger the build-and-push workflow
+              curl -X POST \
+              -H "Accept: application/vnd.github.everest-preview+json" \
+              -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+              https://api.github.com/repos/owner/repo/dispatches \
+              -d '{"event_type": "v4-build-and-push"}'
+            fi
+          else
+            echo "Previous hash not found. This is likely the first run."
+            echo "${{ env.CURRENT_HASH }}" > upstream-releases/dotnet_hash.txt
+          fi
